[package]
name = "relly"
version = "0.1.0"
authors = ["Hidekazu Kobayashi <kobahide789@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", default-features = false }
zerocopy = "0.3"

[dev-dependencies]
tempfile = "3.1"
sha-1 = "0.9"
md-5 = "0.9"
